--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     align-items: center;
 }
 
+h1 {
+    color: purple;
+    font-size: 72px;
+}
+
 div.container {
     color: blue;
     height: 960px;
